2002-04-30  Yoshinori K. Okuji  <okuji@enbug.org>

	From Jean-Jacques Michel <jjmichel@linbox.com>:
	* stage2/boot.c (load_image): For Linux, check if DATA_LEN is
	greater than MULTIBOOT_SEARCH. If that's true, read the rest
	after copying data already read in BUFFER.
	
2002-04-30  Yoshinori K. Okuji  <okuji@enbug.org>

	* stage2/boot.c (load_image): For Linux, don't check if the
	length of protected mode code is greater than or equal to the
	expected length minus 16. Instead, just check if no error
	occurred. That was problematic, because memdisk has no protected
	mode code. Also, I don't see what the magic number 16 was for.
	
2002-04-29  Yoshinori K. Okuji  <okuji@enbug.org>

	* stage2/builtins.c [SUPPORT_SERIAL] (terminal_func): Added a
	new option ``--silent''. This suppresses messages, if specified.
	
2002-04-29  Yoshinori K. Okuji  <okuji@enbug.org>

	* config.guess: New upstream version.
	* config.sub: Likewise.
	
2002-04-20  Yoshinori K. Okuji  <okuji@enbug.org>

	* netboot/config.c (PCI_NIC) [INCLUDE_DAVICOM]: Fix typos.
	Reported by Julien Perrot <julien.perrot@iie.cnam.fr>.
	
2002-04-17  Yoshinori K. Okuji  <okuji@enbug.org>

	* stage2/builtins.c [SUPPORT_SERIAL] (terminal_func): Set
	COUNT_LINES to -1, to disable the pager.
	
2002-04-16  Yoshinori K. Okuji  <okuji@enbug.org>

	* docs/grub.texi (Obtaining and Building GRUB): Update the link
	to the binutils site.

2002-04-06  Pavel Roskin  <proski@gnu.org>

	* util/grub-install.in: Fix hardcoded /dev/hda1.

2002-04-06  Yoshinori K. Okuji  <okuji@enbug.org>

	* stage2/builtins.c [GRUB_UTIL] (dump_func): New function.
	[GRUB_UTIL] (builtin_dump): New variable.
	(builtin_table) [GRUB_UTIL]: Added a pointer to BUILTIN_DUMP.
	* util/grub-install.in: Make sure that GRUB reads the same
	images as the host operating system by comparing the result of
	running the command "dump" with the contents of the OS file.
	
2002-04-04  Yoshinori K. Okuji  <okuji@enbug.org>
