@@ -1,5 +1,5 @@
 .\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.23.
-.TH MBCHK "1" "April 2002" "mbchk (GNU GRUB 0.92)" FSF
+.TH MBCHK "1" "May 2002" "mbchk (GNU GRUB 0.92)" FSF
 .SH NAME
 mbchk \- check the format of a Multiboot kernel
 .SH SYNOPSIS
